src/test/ui/issues/issue-10536.stderr
error: macros that expand to items must either be surrounded with braces or followed by a semicolon
  --> $DIR/issue-10536.rs:16:22
   |
LL |     assert!({one! two()});
   |                      ^^

error: expected `(` or `{`, found `}`
  --> $DIR/issue-10536.rs:21:22
   |
LL |     assert!({one! two});
   |                      ^ expected `(` or `{`

error: cannot find macro `one!` in this scope
  --> $DIR/issue-10536.rs:24:14
   |
LL |     assert!({one! two()});
   |              ^^^

error[E0308]: mismatched types
  --> $DIR/issue-10536.rs:24:13
   |
LL |     assert!({one! two()});
   |             ^^^^^^^^^^^^ expected bool, found ()
   |
   = note: expected type `bool`
              found type `()`

error[E0600]: cannot apply unary operator `!` to type `!`
  --> $DIR/issue-10536.rs:31:5
   |
LL |     assert!({one! two});
   |     ^^^^^^^^^^^^^^^^^^^^ cannot apply unary operator `!`

error: aborting due to 5 previous errors

Some errors occurred: E0308, E0600.
For more information about an error, try `rustc --explain E0308`.
